--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,15 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
 	<dependencies>
+
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.1.2.RELEASE</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
