--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=repayment_manager
+
+# DB接続情報
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/repayment_manager
+spring.datasource.username=fukuda
+# spring.datasource.password=パスワード
