--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=repayment_manager
+# logging.level.root=debug
 
 # DB接続情報
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/repayment_manager
 spring.datasource.username=fukuda
-# spring.datasource.password=パスワード
+spring.datasource.password=
+
+# JPA設定
+# Hibernateのdialectを指定
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# HibernateがDDLを生成するかどうかを指定
+spring.jpa.generate-ddl=true
+# HibernateのDDL生成戦略を指定
+spring.jpa.hibernate.ddl-auto=update
