DB接続設定_起動エラー解消(プラグインのバージョン相性が原因）

--- a/pom.xml
+++ b/pom.xml
@@ -36,41 +36,40 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>3.2.3</version>
+			<!-- <version>3.2.3</version> -->
 		</dependency>
 
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
+		<!-- <dependency>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>6.0.0.Alpha7</version>
-			<type>pom</type>
-		</dependency>
+			<version>6.4.4.Final</version>
+		</dependency> -->
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version> 6.3.1.Final</version>
+			<version> 6.4.4.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
-			<!-- <version>3.2.0</version> -->
+			<version>3.1.0</version>
 		</dependency>
 
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.2.4</version>
-		</dependency>
+		</dependency> -->
 
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.7.3</version>
+			<!-- <version>42.7.3</version> -->
 		</dependency>
 
 
